# sofa-studio

./: ARCHITECTURE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
addons/postgres/: CMakeLists.txt  SofaAddonPostgres.cpp  SofaAddonPostgres.h
apps/desktop/: CMakeLists.txt  main.cpp
apps/desktop/qml/: Main.qml
docs/: 02-core-concepts.md  03-ui-system.md  05-postgres-addon.md  07-datagrid-engine.md
src/core/: AppContext.cpp  AppContext.h  CMakeLists.txt  CommandService.cpp  CommandService.h  ConsoleLogger.cpp  ConsoleLogger.h  ICommandService.h  ILocalStoreService.h  ILogger.h  ISecretsService.h  LocalStoreService.cpp  LocalStoreService.h  QueryWorker.cpp  QueryWorker.h  SecretsServiceStub.h  SimpleSecretsService.cpp  SimpleSecretsService.h  SofaCore.cpp  SofaCore.h
src/core/addons/: IAddon.h
src/core/udm/: UDM.h
src/datagrid/: CMakeLists.txt  DataGridEngine.cpp  DataGridEngine.h  DataGridView.cpp  DataGridView.h  SofaDataGrid.cpp  SofaDataGrid.h
src/ui/: AppButton.qml  AppHeader.qml  AppSidebar.qml  AppTabs.qml  AppTextField.qml  Button.qml  CMakeLists.txt  ColumnEditorModal.qml  ConnectionDialog.qml  ConnectionErrorModal.qml  ConnectionForm.qml  ConnectionSelectorModal.qml  DataGrid.qml  DatabaseExplorer.qml  PostgresDdl.js  RowEditorModal.qml  SqlConsole.qml  TableStructureView.qml  Theme.qml  ViewEditor.qml
src/ui/assets/: Icone.icns
